[package]
name = "cache-thing"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"

[dependencies]
anyhow = "1.0.99"
base16ct = { version = "0.3.0", features = ["alloc"] }
clap = { version = "4.5.45", features = ["derive"] }
env_logger = "0.11.8"
flate2 = "1.1.2"
gix = { version = "0.73.0", default-features = false, features = [
  "attributes",
] }
log = "0.4.27"
sha2 = "0.10.9"
tar = "0.4.44"
